*SWAGGER* add ApiKeyAuth
